Minor popup and manifest adjustment

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <title>Extension Popup</title>
     <link rel="stylesheet" href="popup.css">
 </head>
-<body>
+<body class="groove">
     <header>
         <a href="https://github.com/bjralphs/Youtube.Focus-Google_Chrome_Extension" target="_blank">
             YouTubeFocus <img src="media/icon128.png" alt="Github Icon" id="github-icon">
@@ -19,11 +19,11 @@
         <input type="checkbox" id="grayscale-toggle">
     </div>
     <div class="toggle-section">
-        <label>Shorts Disabling</label>
+        <label>Disable "Shorts"</label>
         <input type="checkbox" id="shorts-toggle">
     </div>
     <div class="toggle-section">
-        <label>Comments Disabling</label>
+        <label>Disable Comments</label>
         <input type="checkbox" id="comments-toggle">
     </div>
     <!--Troubleshooting
