--- a/popup.html
+++ b/popup.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Extension Popup</title>
-    <link rel="stylesheet" href="popup.css">
-</head>
-<body class="groove">
+    <link rel="stylesheet" href="popup.css" />
+  </head>
+  <body class="groove">
     <header>
-        <a href="https://github.com/bjralphs/Youtube.Focus-Google_Chrome_Extension" target="_blank">
-            YouTubeFocus <img src="media/icon128.png" alt="Github Icon" id="github-icon">
-        </a>
+      <a
+        href="https://github.com/bjralphs/Youtube.Focus-Google_Chrome_Extension"
+        target="_blank"
+      >
+        YouTubeFocus
+        <img src="media/icon128.png" alt="Github Icon" id="github-icon" />
+      </a>
     </header>
-    <hr>
-
-    <div class="toggle-section">
-        <label>Grayscale</label>
-        <input type="checkbox" id="grayscale-toggle">
-    </div>
-    <div class="toggle-section">
-        <label>Disable "Shorts"</label>
-        <input type="checkbox" id="shorts-toggle">
-    </div>
-    <div class="toggle-section">
-        <label>Disable Comments</label>
-        <input type="checkbox" id="comments-toggle">
-    </div>
-    <!--Troubleshooting
+    <hr />
+    <main>
+      <div class="switch-container">
+        <span class="left-text">Grayscale</span>
+        <label class="switch">
+          <input class="toggle" type="checkbox" id="grayscale-toggle" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div class="switch-container">
+        <span class="left-text">Disable "Shorts"</span>
+        <label class="switch">
+          <input class="toggle" type="checkbox" id="shorts-toggle" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div class="switch-container">
+        <span class="left-text">Disable Comments</span>
+        <label class="switch">
+          <input class="toggle" type="checkbox" id="comments-toggle" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <!--Troubleshooting
     <div class="reset-section">
         <button id="reset-button">Reset to Default</button>
     </div>
     -->
-    <div id="status"></div>
-    <hr id="bottom">
-    
+      <div id="status"></div>
+      <hr id="bottom" />
+    </main>
+
+    <footer>v.1.0</footer>
+
     <script src="popup.js" defer></script>
-</body>
+  </body>
 </html>
