--- a/popup.html
+++ b/popup.html
@@ -39,11 +39,20 @@
           <span class="slider"></span>
         </label>
       </div>
-      <!--Troubleshooting
-    <div class="reset-section">
+      <div class="switch-container">
+        <span class="left-text">Disable Related Content</span>
+        <label class="switch">
+          <input class="toggle" type="checkbox" id="related-toggle" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      
+    <!-- Troubleshooting
+      <div class="reset-section">
         <button id="reset-button">Reset to Default</button>
-    </div>
-    -->
+    </div> 
+  -->
+    
       <div id="status"></div>
       <hr id="bottom" />
     </main>
